# webscraper

./: .gitignor  LICENSE.md  README.md  data.txt  haraj_data.csv  haraj_links.txt  haraj_scraper.py  htest.py  maroof_scraper.py  pyproject.toml  requirements.txt  webscraper.py
modules/: __init__.py  gathern.py  htest.py  scraper.py  test.py  utils.py
