[project]
name = "webscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.12.2",
    "html5lib==1.1",
    "requests==2.31.0",
    "selenium==4.14",
    "tqdm==4.66.1",
    "webdriver-manager==4.0.1",
]
